// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/HistoriqueFiltres Avec Filtres 1`] = `
<div
  className="mb-8 pb-8 border-b border-b-gray-200"
>
  <p
    className="mb-6 font-bold"
  >
    Filtrer l’historique des modifications par
  </p>
  <div
    className="grid sm:grid-cols-2 lg:grid-cols-4 gap-x-8 gap-y-6"
  >
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Type d'élément modifié
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-type"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <span
            className="mr-auto flex line-clamp-1"
          >
            <span>
              Action : statut
            </span>
          </span>
          <span
            className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de début
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value="2022-11-03"
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de fin
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          data-test="filtre-end-date"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value="2022-11-24"
        />
      </div>
    </div>
  </div>
  <div
    className="flex items-baseline gap-6 mt-8"
  >
    <span
      className="text-sm text-gray-400"
    >
      4
       résultat
      s
    </span>
    <div
      className="w-max mt-4 border-b border-bf500 md:mt-auto"
    >
      <button
        className="flex items-center text-bf500 hover:!bg-none"
        data-test="desactiver-les-filtres"
        onClick={[Function]}
      >
        <span
          className="fr-fi-close-circle-fill mr-1 scale-90"
        />
        <span
          className="text-sm"
        >
          Désactiver tous les filtres
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Historique/HistoriqueFiltres Defaut 1`] = `
<div
  className="mb-8 pb-8 border-b border-b-gray-200"
>
  <p
    className="mb-6 font-bold"
  >
    Filtrer l’historique des modifications par
  </p>
  <div
    className="grid sm:grid-cols-2 lg:grid-cols-4 gap-x-8 gap-y-6"
  >
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Type d'élément modifié
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <button
          aria-expanded={false}
          aria-label="ouvrir le menu"
          className="flex items-center w-full p-2 text-left text-sm"
          data-test="filtre-type"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onPointerDown={[Function]}
        >
          <span
            className="mr-auto text-gray-500 italic line-clamp-1"
          >
            Sélectionner des options
          </span>
          <span
            className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
          />
        </button>
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de début
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value=""
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <p
        className="mb-2 font-medium"
      >
        Date de fin
      </p>
      <div
        className="shadow border-b border-b-gray-500"
      >
        <input
          className="w-full p-2"
          data-test="filtre-end-date"
          onChange={[Function]}
          pattern="\\\\d{4}-\\\\d{2}-\\\\d{2}"
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
